[gd_scene load_steps=52 format=3 uid="uid://cps0ej8gfot64"]

[ext_resource type="Script" path="res://scripts/necromancer.gd" id="1_5freq"]
[ext_resource type="Texture2D" uid="uid://wjllrgmhiagm" path="res://assets/characters/Necromancer_creativekind-Sheet.png" id="2_6ps3x"]
[ext_resource type="PackedScene" uid="uid://dn2j5bhb4kkhs" path="res://scenes/components/progress_bar.tscn" id="3_x52rr"]
[ext_resource type="AudioStream" uid="uid://be5sax8egk03b" path="res://assets/musics/soulswallow02-108300.mp3" id="4_0w25i"]
[ext_resource type="AudioStream" uid="uid://c66k1l7vlx7sc" path="res://assets/musics/deathmagic-94937.mp3" id="5_gvhaj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7yrnw"]
size = Vector2(32, 48)

[sub_resource type="Animation" id="Animation_a262b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.5, -17)]
}

[sub_resource type="Animation" id="Animation_v3wvh"]
resource_name = "attack_left"
length = 1.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, -17)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84]
}

[sub_resource type="Animation" id="Animation_1h8ba"]
resource_name = "attack_right"
length = 1.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, -17)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84]
}

[sub_resource type="Animation" id="Animation_idj85"]
resource_name = "being_attacked_left"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [85, 86, 87, 88, 89]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3273t"]
resource_name = "being_attacked_right"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [85, 86, 87, 88, 89]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_o2dqb"]
resource_name = "death"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [102, 103, 104, 105, 106, 107, 108, 109, 110]
}

[sub_resource type="Animation" id="Animation_f1uxw"]
resource_name = "idle_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_espq7"]
resource_name = "idle_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_kgpeb"]
resource_name = "super_attack_left"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, -17)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46]
}

[sub_resource type="Animation" id="Animation_4vw3i"]
resource_name = "super_attack_right"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, -17)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46]
}

[sub_resource type="Animation" id="Animation_3rybn"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 20, 21, 22, 23, 24]
}

[sub_resource type="Animation" id="Animation_mi1g3"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 20, 21, 22, 23, 24]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_22e7l"]
_data = {
"RESET": SubResource("Animation_a262b"),
"attack_left": SubResource("Animation_v3wvh"),
"attack_right": SubResource("Animation_1h8ba"),
"being_attacked_left": SubResource("Animation_idj85"),
"being_attacked_right": SubResource("Animation_3273t"),
"death": SubResource("Animation_o2dqb"),
"idle_left": SubResource("Animation_f1uxw"),
"idle_right": SubResource("Animation_espq7"),
"super_attack_left": SubResource("Animation_kgpeb"),
"super_attack_right": SubResource("Animation_4vw3i"),
"walk_left": SubResource("Animation_3rybn"),
"walk_right": SubResource("Animation_mi1g3")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_no7ta"]
animation = &"attack_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_potgs"]
animation = &"attack_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dyy1b"]
animation = &"attack_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5b7cm"]
animation = &"attack_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_kfyi8"]
blend_point_0/node = SubResource("AnimationNodeAnimation_no7ta")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_potgs")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_dyy1b")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_5b7cm")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_axjd2"]
animation = &"being_attacked_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ja181"]
animation = &"being_attacked_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_21iyb"]
animation = &"being_attacked_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2t1f6"]
animation = &"being_attacked_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_rebep"]
blend_point_0/node = SubResource("AnimationNodeAnimation_axjd2")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_ja181")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_21iyb")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_2t1f6")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_by4kw"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ps3bf"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ytbpn"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sid2t"]
animation = &"death"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_kdb65"]
blend_point_0/node = SubResource("AnimationNodeAnimation_by4kw")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_ps3bf")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_ytbpn")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_sid2t")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_82cen"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hheh6"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_im2gr"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ekjcl"]
animation = &"idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_vvi5x"]
blend_point_0/node = SubResource("AnimationNodeAnimation_82cen")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_hheh6")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_im2gr")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_ekjcl")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ueufd"]
animation = &"super_attack_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_racbe"]
animation = &"super_attack_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cl4yp"]
animation = &"super_attack_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_q0p45"]
animation = &"super_attack_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_0l0pv"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ueufd")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_racbe")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_cl4yp")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_q0p45")
blend_point_3/pos = Vector2(1, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n7gxw"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nt6m0"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7kx31"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7dxqi"]
animation = &"walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_bn3nl"]
blend_point_0/node = SubResource("AnimationNodeAnimation_n7gxw")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_nt6m0")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_7kx31")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_7dxqi")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_rap2s"]
states/Start/position = Vector2(170, 46)
states/attack/node = SubResource("AnimationNodeBlendSpace2D_kfyi8")
states/attack/position = Vector2(525, 106)
states/being_attacked/node = SubResource("AnimationNodeBlendSpace2D_rebep")
states/being_attacked/position = Vector2(120, 85)
states/death/node = SubResource("AnimationNodeBlendSpace2D_kdb65")
states/death/position = Vector2(682, 46)
states/idle/node = SubResource("AnimationNodeBlendSpace2D_vvi5x")
states/idle/position = Vector2(564, 52)
states/super_attack/node = SubResource("AnimationNodeBlendSpace2D_0l0pv")
states/super_attack/position = Vector2(735, 93)
states/walk/node = SubResource("AnimationNodeBlendSpace2D_bn3nl")
states/walk/position = Vector2(447, 52)

[sub_resource type="CircleShape2D" id="CircleShape2D_70tpr"]
radius = 72.0

[node name="Necromancer" type="CharacterBody2D" node_paths=PackedStringArray("_animation_tree") groups=["enemy"]]
position = Vector2(0, -34)
script = ExtResource("1_5freq")
_animation_tree = NodePath("AnimationTree")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_7yrnw")

[node name="Texture" type="Sprite2D" parent="."]
position = Vector2(-0.5, -17)
texture = ExtResource("2_6ps3x")
hframes = 17
vframes = 7

[node name="ProgressBar" parent="." instance=ExtResource("3_x52rr")]
offset_left = -16.0
offset_top = -22.0
offset_right = 24.0
offset_bottom = 18.0

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_22e7l")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_rap2s")
anim_player = NodePath("../Animation")
active = true
parameters/attack/blend_position = Vector2(0, 0)
parameters/being_attacked/blend_position = Vector2(0, 0)
parameters/death/blend_position = Vector2(0, 0)
parameters/idle/blend_position = Vector2(0, 0)
parameters/super_attack/blend_position = Vector2(0, 0)
parameters/walk/blend_position = Vector2(-0.000846744, 0.991632)

[node name="SuperAttackTimer" type="Timer" parent="."]

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(0, 2)

[node name="Collision" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_70tpr")

[node name="BodyEnteredAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_0w25i")

[node name="AttackAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_gvhaj")

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_finished"]
[connection signal="timeout" from="SuperAttackTimer" to="." method="_on_super_attack_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
